Fixes layout of artist page on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -200,13 +200,12 @@ a:visited img {
 /* artists */
 .artist {
   border-top: 1px solid #e9ebee;
-  display: flex;
   overflow: hidden;
   padding: 30px 0 0;
 }
+
 .artist_details {
   padding-right: 30px;
-  width: 55%;
 }
 .artist_details h3 {
   margin-top: 0;
@@ -265,6 +264,15 @@ p.artist_links {
 }
 .navMain.is-active {
   display: block;
+}
+
+@media only screen and (min-width: 479px) {
+  .artist {
+    display: flex;
+  }
+  .artist_details {
+    width: 55%;
+  }
 }
 
 /* @end */
